# solana-nft

./: Cargo.toml  LICENSE
client/: Cargo.toml  main.txt  wallet.keypair
client/src/: cl_errors.rs  client.rs  client2.txt  helpers.rs  lib.rs  main.rs
program/: .gitignore  Cargo.toml  my-keypair.json  pk.txt  pks
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/: client.rs  error.rs
