[package]
name = "solana-nft"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.9.5"
solana-client = "1.9.5"
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
alloy-token-program = { path = "../program", features = ["no-entrypoint"] }
solana-account-decoder = "1.9.5"