[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.9.4"
borsh = "0.9.1"
borsh-derive = "0.9.1"
url = "2.2.2"

[lib]
crate-type = ["cdylib", "lib"]